# dpkvs

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
cmake/: dependencies.cmake  test_dependencies.cmake
cmd/client/: main.cpp
cmd/server/: main.cpp
config/: config.yaml
deployment/: .dockerignore  Dockerfile  docker-compose.yml
dpkvs/: CMakeLists.txt
dpkvs/append_only_log/: append_only_log.cpp  append_only_log.h  log_serializer.cpp  log_serializer.h  operations.h
dpkvs/core/: CMakeLists.txt
dpkvs/core/config/: config.cpp  config.h
dpkvs/core/configs/feature/: feature_config.cpp  feature_config.h
dpkvs/core/engines/: operations.h  runtime_store.h  store_engine.h
dpkvs/core/engines/hash_map/: hash_map_store_engine.cpp  hash_map_store_engine.h
dpkvs/core/engines/hash_map/append_only_log/: append_only_log.cpp  append_only_log.h  log_serializer.h
dpkvs/core/engines/hash_map/controller/: store_controller.cpp  store_controller.h
dpkvs/core/engines/hash_map/engine/: hash_map_store_engine.cpp  hash_map_store_engine.h  store_engine.cpp  store_engine.h
dpkvs/core/engines/hash_map/impl/: hash_map_store_engine.h
dpkvs/core/engines/hash_map/persistence/: append_only_log.cpp  append_only_log.h  log_serializer.cpp  log_serializer.h
dpkvs/core/engines/hash_map/runtime/: hash_map_store.cpp  hash_map_store.h
dpkvs/core/logger/console/: console_logger.cpp  console_logger.h
dpkvs/core/store_record/: store_record.cpp  store_record.h
dpkvs/core/store_record/factory/: factory.cpp  factory.h
dpkvs/core/store_record/proto/: store_record.proto
dpkvs/core/store_record/serializer/: operations.h  record_serializer.cpp  record_serializer.h
dpkvs/core/store_value/proto/: store_value.proto
dpkvs/engine/: storable_value.cpp  storable_value.h  store_engine.cpp  store_engine.h
dpkvs/network/: CMakeLists.txt
dpkvs/network/proto/: dpkvs_service.proto  get_operation.proto  put_operation.proto  remove_operation.proto
dpkvs/network/server/: dpkvs_service_impl.cpp  dpkvs_service_impl.h
dpkvs/network/service/: dpkvs_service_impl.cpp  dpkvs_service_impl.h
dpkvs/store_controller/: store_controller.cpp  store_controller.h
tests/: CMakeLists.txt
tests/integration/network/server/: dpkvs_service_impl_test.cpp
tests/integration/network/service/: dpkvs_service_impl_test.cpp
tests/unit/append_only_log/: append_only_log_test.cpp  serializer_test.cpp
tests/unit/core/engines/hash_map/persistence/: append_only_log_test.cpp
tests/unit/core/engines/hash_map/runtime/: hash_map_store_basic_operations_test.cpp  hash_map_store_concurrency_test.cpp
tests/unit/core/store_record/serializer/: serializer_test.cpp
tests/unit/engine/: engine_basic_operations_test.cpp  engine_instantiating_test.cpp  hash_map_store_concurrency_test.cpp
